@@ -1,3 +1,9 @@
+2008-10-03  Alp Toker  <alp@nuanti.com>
+
+        Build fix for trailing comment after #endif
+
+        * dom/ElementRareData.h:
+
 2008-10-03  David Hyatt  <hyatt@apple.com>
 
         Remove addToDirtyRegion.
